MH-4300, MH-4125: (aklassen)
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7587 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/i18n/recordings.properties
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/i18n/recordings.properties
@@ -1,7 +1,7 @@
 i18n.window.title     = Opencast Matterhorn - Recordings
 i18n.tab.recording    = Recordings
 i18n.tab.agent        = Capture Agents
-i18n.button.schedule  = Schedule Recording
+i18n.button.schedule  = Schedule Recordings
 i18n.button.upload    = Upload Recording
 i18n.view.all         = All
 i18n.view.upcoming    = Upcoming
